added contact section

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -40,3 +40,20 @@
     width: 25px;
     margin-right: 10px;
 }
+
+.contact form input, .contact form textarea{
+    display: block;
+    width: 100%;
+    background: #ebebeb;
+    padding: 15px;
+    border: 0;
+    outline: 0;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    resize: none;
+}
+
+.contact-col span{
+    display: block;
+    margin: 20px 0;
+}
