--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -13,7 +13,7 @@ nav{
 }
 
 .logo{
-    width: 100px;
+    width: 80px;
 }
 
 nav ul li{
@@ -21,4 +21,9 @@ nav ul li{
     list-style: none;
     margin: 5px 20px;
     font-size: 16px;
+}
+
+.dark-nav{
+    background: #212EA0;
+    transition: 0.5s;
 }
