created investor profile and user dashboard page

--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -57,3 +57,9 @@
     display: block;
     margin: 20px 0;
 }
+
+.contact-col button{
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
