--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,14 @@ a{
   background: #212EA0;
   color: #fff;
 }
+
+
+@media(max-width: 1200px){
+    .container{
+      padding-left: 5%;
+      padding-right: 5%;
+    }
+    .btn{
+      padding: 14px 22px;
+    }
+}
