Update NavBar hover

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -60,6 +60,9 @@ nav ul li{
         display: block;
         margin: 25px 40px;
     }
+    nav ul li a.active{
+        color: lightgoldenrodyellow;
+    }
     .menu-icon{
         display: block;
         width: 30px;
