--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -56,3 +56,8 @@ p a {
 p a:hover {
   text-decoration: underline;
 }
+.sign-hover:hover{
+  all:unset;
+  cursor: pointer;
+color: rgb(59, 59, 59);
+}
