added tailwindcss, made the design more responsive by fixing some flaws in deigns, modified registration pages

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,30 +1,10 @@
 .hero{
-    width: 100%;
-    min-height: 100vh;
+
     background: linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)), url('../../assets/investors.jpeg');
-    background-size: cover;
     background-position: center;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.hero-text{
-    text-align: center;
-    max-width: 800px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.hero-text h1{
-    font-size: 60px;
-    font-weight: 600;
-}
 
-.hero-text p{
-    max-width: 700px;
-    margin: 10px auto 20px;
-    line-height: 1.4;
-}
 
-.hero-text button{
-    width: 40%;
-}
