--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,35 +1,75 @@
+.footer {
+  background-color: #f5f5f5;
+  border-top: 1px solid #ddd;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
- /* .footer {
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-top: 1px solid #797979;
-    height: 8vh;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-  }
-  
-  */
-  .footer {
-    margin-top: auto; /* Push the footer to the bottom */
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-top: 1px solid #797979;
-    background-color: #f9f9f9; /* add a background color */
-    padding:  1.5rem; /* adjusted padding */ /* adjusted padding */
-  }
-  
-  
-  .footer ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  .footer ul li {
-    display: inline-block;
-    margin-left: 20px;
-  }
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.footer-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-links li {
+  margin-right: 15px;
+  margin-left: 15px;
+  display: inline;
+}
+
+.footer-links li a {
+  color: #000000;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  font-size: 15px;
+}
+
+.footer-links li a:hover {
+  color: #007bff;
+}
+
+.social-media {
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.social-media-links {
+  list-style: none;
+  padding: 0;
+  display: flex;
+}
+
+.social-media-links li {
+  margin-right: 10px;
+  margin-left: 10px; 
+}
+
+.social-media-links li a {
+  color: #333;
+  text-decoration: none;
+  transition: color 0.3s ease;
+  font-size: 20px;
+}
+
+.social-media-links li a:hover {
+  color: #007bff;
+}
+
+.copyright {
+  margin-top: 0px; 
+}
