--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -33,3 +33,8 @@
     display: inline-block;
     margin-left: 20px;
   }
+  .Footer-img{
+    height:25px;
+    padding: 2px;
+    width:25px;
+  }
