--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,69 +1,71 @@
 .about{
-    margin: 100px auto;
-    display: flex;
-    justify-items: center;
-    justify-content: space-between;
-    width: 90%;
+  margin: 100px auto;
+  display: flex;
+  justify-items: center;
+  justify-content: space-between;
+  width: 90%;
 }
 
 .about-left{
-    flex-basis: 40%;
+  flex-basis: 40%;
 }
 
 .about-right{
-    flex-basis: 56%;
+  flex-basis: 56%;
 }
 
 .about-img{
-    width: 100%;
-    border-radius: 10px;
+  width: 100%;
+  border-radius: 10px;
 }
 
 .about h3{
-    font-weight: 600;
-    font-weight: 16px;
-    color: #212EA0;
+  font-weight: 600;
+  font-weight: 16px;
+  color: #212EA0;
 }
 
 .about h2{
-    font-weight: 600;
-    font-size: 35px;
-    margin: 10px 0;
-    max-width: 400px;
+  font-weight: 600;
+  font-size: 35px;
+  margin: 10px 0;
+  max-width: 400px;
+  color: black;
+  
 }
 
 .about p{
-    color: #676767;
-    margin-bottom: 15px;
+  color: #676767;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 600px) {
-    .about {
-      flex-direction: column; /* Change flex direction to stack elements vertically */
-      align-items: center; /* Center align items */
-    }
-
-    #heading{
-        display: flex;
-        justify-content: center;
-    }
-  
-    .about-left,
-    .about-right {
-      flex-basis: 100%;
-      margin-bottom: 30px; 
-    }
-  
-    .about-img {
-      border-radius: 15px; 
-    }
-  
-    .about h2 {
-      font-size: 28px; /* Reduce font size */
-      text-align: center; /* Center align text */
-    }
-  
-    .about p {
-      text-align: center; 
-    }
+  .about {
+    flex-direction: column; /* Change flex direction to stack elements vertically */
+    align-items: center; /* Center align items */
   }
+
+  #heading{
+      display: flex;
+      justify-content: center;
+  }
+
+  .about-left,
+  .about-right {
+    flex-basis: 100%;
+    margin-bottom: 30px; 
+  }
+
+  .about-img {
+    border-radius: 15px; 
+  }
+
+  .about h2 {
+    font-size: 28px; /* Reduce font size */
+    text-align: start; /* Center align text */
+  }
+
+  .about p {
+    text-align: center; 
+  }
+}
