--- a/src/Components/Title/Title.css
+++ b/src/Components/Title/Title.css
@@ -1,15 +1,17 @@
 .title{
     text-align: center;
     color: #212EA0;
-    font-size: 15px;
+    font-size: 22px;
     font-weight: 600;
     text-transform: uppercase;
     margin: 70px 0 30px;
-}
+} 
 
 .title h2{
     font-size: 32px;
     color: #000F38;
     margin-top: 5px;
     text-transform: none;
+    color: black;
+    
 }
