Made few changes in the Chatbot look

--- a/src/ChatAssistant/ChatAssistant.css
+++ b/src/ChatAssistant/ChatAssistant.css
@@ -5,13 +5,14 @@
     margin-right:20px;
     margin-bottom: 12px;
 }
-
+.react-chatbot-kit-chat-input {
+  outline:none;
+}
 .react-chatbot-kit-chat-inner-container {
   background-color: rgb(76, 96, 128);
 }
 .react-chatbot-kit-chat-container {
-  color:rgb(187, 128, 41);
-  width: 400px;
+  width: 350px;
 }
 .react-chatbot-kit-chat-bot-message {
   margin-left: 10px;
@@ -19,7 +20,6 @@
 
 .react-chatbot-kit-chat-header {
   background-color: rgb(153, 189, 230);
-
 }
 .react-chatbot-kit-chat-bot-message {
   background-color: #2977f5;
@@ -38,4 +38,14 @@
   width:50px;
   border-radius: 50px;
   right:12px;
+}
+.Avatar{
+  height:50px;
+  width:50px;
+  border-radius: 50px;
+}
+.userAvatar{
+  height:50px;
+  width:50px;
+  border-radius:50px;
 }
