--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -38,13 +38,49 @@ nav ul li a.active{
 /* Media query for tablets */
 @media(max-width: 1000px){
     .logo{
-        width: 140px;
+        width: 100px;
     }
     nav ul li{
-        margin: 10px 15px;
+        margin: 8px 12px;
     }
 }
 
+@media (max-width: 730px){
+  nav {
+    padding: 15px 20px; /* Adjust padding for better spacing */
+  }
+
+  .logo {
+    width: 80px;
+  }
+
+  nav ul {
+    position: absolute; /* Change position to absolute */
+    top: 60px; /* Adjust top position */
+    right: 20px; /* Adjust right position */
+    background: #212ea0;
+    z-index: 10; /* Increase z-index to show above other content */
+    width: 200px;
+    padding-top: 20px; /* Adjust padding-top */
+    transition: 0.5s;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 10px 0; /* Adjust margin */
+    text-align: center; /* Center align menu items */
+  }
+
+  .menu-icon {
+    display: block;
+    width: 30px;
+    cursor: pointer;
+  }
+
+  .hide-mobile-menu {
+      display: none;
+  }
+}
 
 /* SmartPhone Media query */
 @media (max-width: 600px) {
