--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -14,9 +14,10 @@ body {
   width: 100%;
   position: relative;
   padding-bottom: 100px;
+  padding-left: 25px;
 }
 .wrapper i {
-  top: 50%;
+  top: 45%;
   height: 50px;
   width: 50px;
   cursor: pointer;
@@ -30,6 +31,13 @@ body {
   transform: translateY(-50%);
   transition: transform 0.1s linear;
 }
+
+#left{
+  position: absolute;
+  left: 0;
+  z-index:1;
+}
+
 .wrapper i:active {
   transform: translateY(-50%) scale(0.85);
 }
@@ -69,7 +77,17 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+.carousel  {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 5px;
+  padding: 10px;
+}
+
 .carousel .card {
+  transition: all 0.4s;
   scroll-snap-align: start;
   height: 342px;
   list-style: none;
@@ -78,13 +96,26 @@ body {
   padding-bottom: 15px;
   flex-direction: column;
   border-radius: 8px;
+  overflow: hidden;
 }
-.carousel .card .img {
-  background: #8b53ff;
-  height: 148px;
-  width: 148px;
+
+
+.carousel  .img {
+  position: relative;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #000;
+  color: #fff;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-}
+  font-size: 2rem;
+  font-weight: 700;
+  transition: .5s; 
+} 
+
 .card .img img {
   width: 140px;
   height: 140px;
@@ -92,24 +123,99 @@ body {
   object-fit: cover;
   border: 4px solid #fff;
 }
-.carousel .card h2 {
-  font-weight: 500;
-  font-size: 1.56rem;
-  margin: 30px 0 5px;
-}
-.carousel .card span {
-  color: #6a6d78;
-  font-size: 1.31rem;
+
+.card .info{
+  margin-top: 25px;
 }
 
-.text {
-  text-align: center;
+.carousel  .card .c-1{
+  background: #f9ca24;
+  box-shadow: 0 0 0 0 #f9ca24;
 }
-.small {
-  display: none;
+
+.carousel  .card .c-2{
+  background: #6c5ce7;
+  box-shadow: 0 0 0 0 #6c5ce7;
+}
+
+.carousel  .card .c-3{
+  background: #f9ca24;
+  box-shadow: 0 0 0 0 #f9ca24;
+}
+
+.carousel  .card .c-4{
+  background: #3DA5D8;
+  box-shadow: 0 0 0 0 #3DA5D8;
+}
+
+.carousel  .card .c-5{
+  background: #f9ca24;
+  box-shadow: 0 0 0 0 #f9ca24;
+}
+
+.carousel  .card .c-6{
+  background: #6c5ce7;
+  box-shadow: 0 0 0 0 #6c5ce7;
+}
+
+.carousel  .card:hover .c-1{
+  box-shadow: 0 0 0 300px #f9ca24;
+}
+
+.carousel  .card:hover .c-2{
+  box-shadow: 0 0 0 300px #6c5ce7;
+}
+
+.carousel  .card:hover .c-3{
+  box-shadow: 0 0 0 300px #f9ca24;
+}
+
+.carousel  .card:hover .c-4{
+  box-shadow: 0 0 0 300px #3DA5D8;
+}
+
+.carousel  .card:hover .c-5{
+  box-shadow: 0 0 0 300px #f9ca24;
+}
+
+.carousel  .card:hover .c-6{
+  box-shadow: 0 0 0 300px #6c5ce7;
+}
+
+.carousel  .card .info {
+  position: relative;
+  z-index: 1;
+  transition: .5s;
+}
+
+.carousel  .card:hover .info {
+  color: #fff;
+}
+
+.carousel  .card .info h2 {
+  margin: 20px 0;
+  font-size: 1.2rem;
+}
+
+.carousel  .card .info span {
+  margin: 5px;
+  padding: 5px;
+  font-size: 1.1rem;
   text-align: center;
-  color: dodgerblue;
-  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+
+.carousel:hover .card{
+  opacity: .5;
+  filter: blur(3px);
+}
+
+.carousel .card:hover{
+  overflow: hidden;
+  opacity: 1;
+  filter: blur(0px);
 }
 
   @media screen and (max-width: 900px) {
