--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,11 @@
     padding-top: 60px;
 
 }
+.main-div{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    overflow-x: hidden;
+}
