--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -12,6 +12,10 @@
 
 .about-right{
   flex-basis: 56%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .about-img{
@@ -31,6 +35,7 @@
   margin: 10px 0;
   max-width: 400px;
   color: black;
+  text-align: center;
   
 }
 
