--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 }
 .main-div{
-    background-color: black;
+    /* background-color: black; */
     display: flex;
     flex-direction: column;
     /* align-items: center; */
