fixes outline error

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,8 +1,8 @@
-.login-outerContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 90.5vh;
+.login-outerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90.5vh;
 }
 
 .login-container {
@@ -12,7 +12,11 @@
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #fff;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.login-container > input {
+  outline: none;
 }
 
 h2 {
