--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -17,6 +17,11 @@
   width: 100%;
 }
 
+@media  (min-height:600px){
+  .footer-links{
+    flex-direction: column;
+  }
+}
 .footer-links {
   list-style: none;
   padding: 0;
