--- a/src/Components/Testimonials/Testimonial.css
+++ b/src/Components/Testimonials/Testimonial.css
@@ -6,9 +6,6 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-body {
-
-}
 .wrapper {
   /* max-width: 1100px; */
   width: 100%;
@@ -112,7 +109,10 @@ body {
   color: dodgerblue;
   margin-top: 1rem;
 }
-
+.card:hover img {
+  transition: transform 0.3s ease;
+  transform: scale(1.1);
+}
   @media screen and (max-width: 900px) {
     .wrapper .carousel {
       grid-auto-columns: calc((100% / 2) - 9px);
